fix spacing

--- a/_includes/styles/home.scss
+++ b/_includes/styles/home.scss
@@ -51,7 +51,7 @@
     }
 
     table {
-      max-width: 100%;
+      max-width: 100vw;
       flex: 1 0 auto;
       width: 370px;
       margin: 16px;
